--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-<html lang="en">
-
 <head>
   <title>Looking Glass</title>
   <meta charset="utf-8">
@@ -11,7 +9,6 @@
   <link href="static/css/material-kit.min.css" rel="stylesheet"/>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
-
 <body>
   <nav class="navbar navbar-expand-lg bg-rose">
     <div class="container">
@@ -107,16 +104,11 @@
       </div>
     </div>
 </body>
-
 <footer class="footer footer-rose" >
   <div class="container">
     <nav class="float-left">
       <ul>
-        <li>
-          <a href="https://www.creative-tim.com/">
-              Creative Tim
-          </a>
-        </li>
+        <li><a href="https://www.creative-tim.com/">Creative Tim</a></li>
       </ul>
     </nav>
     <div class="copyright float-right">
