--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,7 @@
       <div class="navbar-translate">
         <a class="navbar-brand" style="font-size:35px" href="http://fireprotocol.com">fire protocol</a>
       </div>
-      <div class="collapse navbar-collapse">
-      </div>
+      <div class="collapse navbar-collapse"></div>
     </div>
   </nav>
   <br><br><br>
@@ -107,9 +106,7 @@
 <footer class="footer footer-rose" >
   <div class="container">
     <nav class="float-left">
-      <ul>
-        <li><a href="https://www.creative-tim.com/">Creative Tim</a></li>
-      </ul>
+      <ul><li><a href="https://www.creative-tim.com/">Creative Tim</a></li></ul>
     </nav>
     <div class="copyright float-right">
         &copy;
