--- a/templates/index.html
+++ b/templates/index.html
@@ -109,10 +109,7 @@
       <ul><li><a href="https://www.creative-tim.com/">Creative Tim</a></li></ul>
     </nav>
     <div class="copyright float-right">
-        &copy;
-        <script>
-            document.write(new Date().getFullYear())
-        </script>, made with <i style="color:#e33771" class="material-icons">favorite</i> by
+        with <i style="color:#e33771" class="material-icons">favorite</i> by
         <a href="http://fireprotocol.com" target="blank">Victor</a>
     </div>
   </div>
